--- a/.env
+++ b/.env
@@ -2,9 +2,13 @@
 # To change this:
 # * uncomment SEARXNG_HOSTNAME, and replace <host> by the SearXNG hostname
 # * uncomment LETSENCRYPT_EMAIL, and replace <email> by your email (require to create a Let's Encrypt certificate)
+# * (Optional) uncomment SEARXNG_PUBLIC_INSTANCE if this is a public instance
+# * (Optional) uncomment and edit SEARXNG_EXTERNAL_BANG_ALLOWLIST to allow Bang redirects to the specified domains
 
 # SEARXNG_HOSTNAME=<host>
 # LETSENCRYPT_EMAIL=<email>
+# SEARXNG_PUBLIC_INSTANCE=true
+# SEARXNG_EXTERNAL_BANG_ALLOWLIST="https://en.wikipedia.org/wiki/Special:Search https://www.youtube.com/results https://www.amazon.com/s https://www.google.com/search https://github.com/search https://www.reddit.com/search https://www.imdb.com/find https://www.google.com/maps/search https://www.wolframalpha.com/input https://duckduckgo.com/"
 
 # Optional:
 # If you run a very small or a very large instance, you might want to change the amount of used uwsgi workers and threads per worker
