--- a/Caddyfile
+++ b/Caddyfile
@@ -20,72 +20,85 @@
 	}
 }
 
-{$SEARXNG_HOSTNAME}
+{$SEARXNG_HOSTNAME} {
 
-tls {$SEARXNG_TLS}
+	tls {$SEARXNG_TLS}
 
-encode zstd gzip
+	encode zstd gzip
 
-@api {
-	path /config
-	path /healthz
-	path /stats/errors
-	path /stats/checker
-}
+	redir / /sakura-search/
+	redir /sakura-search /sakura-search/
+	
+	handle /sakura-search/* {
+		@api {
+			path /sakura-search/config
+			path /sakura-search/healthz
+			path /sakura-search/stats/errors
+			path /sakura-search/stats/checker
+		}
 
-@search {
-	path /search
-}
+		@search {
+			path /sakura-search/search
+		}
 
-@imageproxy {
-	path /image_proxy
-}
+		@imageproxy {
+			path /sakura-search/image_proxy
+		}
 
-@static {
-	path /static/*
-}
+		@static {
+			path /sakura-search/static/*
+		}
 
-header {
-	# CSP (https://content-security-policy.com)
-	Content-Security-Policy "upgrade-insecure-requests; default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; form-action 'self' {$SEARXNG_EXTERNAL_BANG_ALLOWLIST} https://github.com/searxng/searxng/issues/new; font-src 'self'; frame-ancestors 'self'; base-uri 'self'; connect-src 'self' https://overpass-api.de; img-src * data:; frame-src https://www.youtube-nocookie.com https://player.vimeo.com https://www.dailymotion.com https://www.deezer.com https://www.mixcloud.com https://w.soundcloud.com https://embed.spotify.com;"
+		header {
+			# CSP (https://content-security-policy.com)
+			Content-Security-Policy "upgrade-insecure-requests; default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; form-action 'self' {$SEARXNG_EXTERNAL_BANG_ALLOWLIST} https://github.com/searxng/searxng/issues/new; font-src 'self'; frame-ancestors 'self'; base-uri 'self'; connect-src 'self' https://overpass-api.de; img-src * data:; frame-src https://www.youtube-nocookie.com https://player.vimeo.com https://www.dailymotion.com https://www.deezer.com https://www.mixcloud.com https://w.soundcloud.com https://embed.spotify.com;"
 
-	# Disable some browser features
-	Permissions-Policy "accelerometer=(),camera=(),geolocation=(),gyroscope=(),magnetometer=(),microphone=(),payment=(),usb=()"
+			# Disable some browser features
+			Permissions-Policy "accelerometer=(),camera=(),geolocation=(),gyroscope=(),magnetometer=(),microphone=(),payment=(),usb=()"
 
-	# Set referrer policy
-	Referrer-Policy "no-referrer"
+			# Set referrer policy
+			Referrer-Policy "no-referrer"
 
-	# Force clients to use HTTPS
-	Strict-Transport-Security "max-age=31536000"
+			# Force clients to use HTTPS
+			Strict-Transport-Security "max-age=31536000"
 
-	# Prevent MIME type sniffing from the declared Content-Type
-	X-Content-Type-Options "nosniff"
+			# Prevent MIME type sniffing from the declared Content-Type
+			X-Content-Type-Options "nosniff"
 
-	# X-Robots-Tag (comment to allow site indexing)
-	X-Robots-Tag "noindex, noarchive, nofollow"
+			# X-Robots-Tag (comment to allow site indexing)
+			X-Robots-Tag "noindex, noarchive, nofollow"
 
-	# Remove "Server" header
-	-Server
-}
+			# Remove "Server" header
+			-Server
+		}
 
-header @api {
-	Access-Control-Allow-Methods "GET, OPTIONS"
-	Access-Control-Allow-Origin "*"
-}
+		header @api {
+			Access-Control-Allow-Methods "GET, OPTIONS"
+			Access-Control-Allow-Origin "*"
+		}
 
-route {
-	# Cache policy
-	header Cache-Control "max-age=0, no-store"
-	header @search Cache-Control "max-age=5, private"
-	header @imageproxy Cache-Control "max-age=604800, public"
-	header @static Cache-Control "max-age=31536000, public, immutable"
-}
+		route {
+			# Cache policy
+			header Cache-Control "max-age=0, no-store"
+			header @search Cache-Control "max-age=5, private"
+			header @imageproxy Cache-Control "max-age=604800, public"
+			header @static Cache-Control "max-age=31536000, public, immutable"
+		}
 
-# SearXNG (uWSGI)
-reverse_proxy localhost:8080 {
-	header_up X-Forwarded-Port {http.request.port}
-	header_up X-Real-IP {http.request.remote.host}
+		handle /sakura-search/static/themes/simple/img/favicon.svg {
+		        root * /var/www/
+		        file_server
+		        header Content-Type "image/svg+xml"
+		        rewrite * /favicon.svg
+		}
 
-	# https://github.com/searx/searx-docker/issues/24
-	header_up Connection "close"
+		# SearXNG (uWSGI)
+		reverse_proxy localhost:8080 {
+			header_up X-Forwarded-Port {http.request.port}
+			header_up X-Real-IP {http.request.remote.host}
+
+			# https://github.com/searx/searx-docker/issues/24
+			header_up Connection "close"
+		}
+	}
 }
