--- a/Caddyfile
+++ b/Caddyfile
@@ -97,6 +97,8 @@
 			header_up X-Forwarded-Port {http.request.port}
 			header_up X-Real-IP {http.request.remote.host}
 
+			header_down Location "^http://(duckduckgo\.com.*)$" "https://$1"
+
 			# https://github.com/searx/searx-docker/issues/24
 			header_up Connection "close"
 		}
